feat: wip caching layer for ep.

--- a/package.json
+++ b/package.json
@@ -130,5 +130,8 @@
     "type": "opencollective",
     "url": "https://opencollective.com/codesandbox",
     "logo": "https://opencollective.com/codesandbox/logo.txt"
+  },
+  "volta": {
+    "node": "10.22.1"
   }
 }
